Install Maven, java