@@ -7,6 +7,9 @@ run DEBIAN_FRONTEND=noninteractive apt-get -qq dist-upgrade
 run DEBIAN_FRONTEND=noninteractive apt-get -qq install python-software-properties software-properties-common
 run DEBIAN_FRONTEND=noninteractive add-apt-repository ppa:git-core/ppa
 run DEBIAN_FRONTEND=noninteractive apt-get -qq update
-run DEBIAN_FRONTEND=noninteractive apt-get -qq install git
+run DEBIAN_FRONTEND=noninteractive apt-get -qq install git curl wget openjdk-7-jdk
 
-run DEBIAN_FRONTEND=noninteractive apt-get -qq install curl wget
+# Install Maven from tar
+
+run curl -sSL http://archive.apache.org/dist/maven/maven-3/3.3.1/binaries/apache-maven-3.3.1-bin.tar.gz | tar -C /opt/ -xzf - && ln -sf /opt/apache-maven-3.3.1/bin/mvn /usr/bin/mvn
+run echo "MAVEN_OPTS='-Xmx1048m -XX:MaxPermSize=1024m'" >> /etc/environment
